<resources>
    <string name="app_name">Kernel Tweaker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_about">About</string>
    <string name="about_ok">OK</string>
    <string name="about_body">
<![CDATA[
        <b>Colorpickercollection Library & Demo</b><br>
        Version %s<br><br>
        <a href="https://github.com/gabrielemariotti/colorpickercollection">Source</a><br><br>
        <a href="https://plus.google.com/114432517923423045208">By Gabriele Mariotti</a><br><br>

    ]]>
    </string>
    <string name="b1text">Google+</string>
    <string name="b2text">Github</string>
    <string name="b3text">Donate</string>
    <string name="aokp_gplus">https://plus.google.com/u/0/+AOKPco/posts</string>
    <string name="aokp_github">https://github.com/AOKP</string>
    <string name="aokp_donate">http://aokp.co/donate/</string>
    <string name="du_gplus">https://plus.google.com/u/0/communities/109738128866939227235</string>
    <string name="du_github">https://github.com/DirtyUnicorns-KitKat/</string>
    <string name="du_donate">http://forum.xda-developers.com/donatetome.php?u=1289361</string>
    <string name="omni_gplus">https://plus.google.com/u/0/+OmniromOrg/posts?hl=it</string>
    <string name="omni_github">https://github.com/omnirom/</string>
    <string name="aicp_gplus">https://plus.google.com/u/0/communities/101008638920580274588?hl=it</string>
    <string name="aicp_github">https://github.com/AICP</string>
    <string name="aicp_donate">http://forum.xda-developers.com/donatetome.php?u=1184673</string>
    <string name="b2dsht">Site</string>
    <string name="dsht_gplus">https://plus.google.com/u/0/communities/101081078098156588800?hl=it</string>
    <string name="dsht_site">http://www.dshtglobal.com/</string>
    <string name="dsht_github">https://github.com/cesco89/android-kernel-tweaker</string>
    <string name="dsht_donate">http://goo.gl/idSPM3</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string-array name="menu_entries">
        <item>--Device Info</item>
        <item>Cpu Stats</item>
        <item>Cpu Info</item>
        <item>--SoC Params</item>
        <item>Cpu Parameters</item>
        <item>Gpu Parameters</item>
        <item>UV Table</item>
        <item>--Kernel Params</item>
        <item>Kernel</item>
        <item>Low Memory Killer</item>
        <item>Virtual Machine</item>
        <item>--Set on boot</item>
        <item>Review Items</item>
        <item>--Utilities</item>
        <item>File Manager</item>
        <item>Backup</item>
        <item>Recovery actions</item>
        <item>--Extra</item>
        <item>Build.prop mods</item>
        <item>Init.d tweaks</item>
        <item>WP Blur</item>
        <item>--App Settings/infos</item>
        <item>Settings</item>
        <item>Informations</item>
    </string-array>
    <string-array name="menu_descs">
        <item>Frequencies time in state</item>
        <item>Informations about CPU</item>
        <item>Tweak CPU Parameters</item>
        <item>Tweak GPU Parameters</item>
        <item>Manage CPU Voltage</item>
        <item>Tweak Kernel Parameters</item>
        <item>Tweak native task killer</item>
        <item>VM Settings</item>
        <item>Review values set at boot</item>
        <item>Manage some file types</item>
        <item>Backup current kernel/recovery</item>
        <item>Execute recovery stuff</item>
        <item>App Settings</item>
        <item>Informations and credits</item>
    </string-array>
    <string-array name="menu_colors">
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
        <item>#ff0099cc</item>
    </string-array>
    <string-array name="flash_dialog">
        <item>Flash Package</item>
    </string-array>
    <string-array name="install_image_dialog">
        <item>Install Boot.img</item>
        <item>Install Recovery.img</item>
    </string-array>
    <string name="bk_recovery">Backup Recovery.img</string>
    <string name="bk_boot">Backup Boot.img</string>
    <string name="bk_boot_desc">Make a backup of current Boot.img on external storage</string>
    <string name="bk_recovery_desc">Make a backup of current Recovery.img on external storage</string>
    <string name="bk_comp">Use Compression</string>
    <string name="bk_md5">Skip MD5 creation</string>
    <string name="list_command_empty">Commands list is empty.\n Tap the plus button to add a command</string>
    <string name="emp_title">EMPTY</string>
    <string name="emp_desc">No Values set at boot</string>
    <string name="rc_title">Root not found</string>
    <string name="rc_desc">Seems your device doesn\'t have root privileges! Please install SuperSU before use this app</string>
    <string name="bb_title">BusyBox not found</string>
    <string name="bb_desc">Your device doesn\'t have BusyBox installed, please install it through PlayStore or XDA before use this app</string>
    <string name="st_cat">Kernel Tweaker settings</string>
    <string name="gift">Just a gift ;)</string>
    <string-array name="lmk_titles">
        <item>FOREGROUND_APP</item>
        <item>VISIBLE_APP</item>
        <item>SECONDARY_SERVER</item>
        <item>HIDDEN_APP</item>
        <item>CONTENT_PROVIDER</item>
        <item>EMPTY_APP</item>
    </string-array>
    <string-array name="lmk_descs">
        <item>The application currently on the screen and running</item>
        <item>The application that is open and running in background</item>
        <item>This is a service an application needs that is alive and ready</item>
        <item>An idle process that wakes up on application request</item>
        <item>Apps that provide data (content) to the system, like Facebook sync</item>
        <item>Apps closed by the users but ready to run</item>
    </string-array>
    <string name="vdd_pref">UV VDD Table</string>
    <string name="vdd_desc">The values you have set inside UV Table page will be applied at boot.\nIf you want to edit these values go to UV Table page.</string>
    <string name="menu_del">Delete</string>
    <string name="menu_add">Add</string>
    <string name="menu_boot">Set on boot</string>
    <string name="menu_command">Add command</string>
    <string name="menu_less">-25mV</string>
    <string name="menu_plus">+25mV</string>
    <string name="uv_title">UV Table Values</string>
    <string name="cpu_max">CPU Max Frequency</string>
    <string name="cpu_min">CPU Min Frequency</string>
    <string name="cpu_governor">Governor</string>
    <string name="cpu_hotplug">Hotplug</string>
    <string name="cpu_cpuquiet_title">Cpuquiet Governor</string>
    <string name="cpu_cpuquiet_desc">This governor controls which of the CPU cores are available and when.</string>
    <string name="cpu_advanced">Advanced Options</string>
    <string name="cpu_adv_gov_title">Governor Tuning</string>
    <string name="cpu_adv_gov_desc">Fine tune governor parameters</string>
    <string name="cpu_adv_quiet_title">Cpuquiet Governor Tuning</string>
    <string name="cpu_adv_quiet_desc">Fine tune cpuquiet governor parameters</string>
    <string name="gov_title">Tweakable Governor Values</string>
    <string name="gpu_category">GPU parameters</string>
    <string name="gpu_freq_title">GPU Max Frequency</string>
    <string name="gpu_freq_desc">Set GPU maximum frequency</string>
    <string name="menu_glossary">GLOSSARY</string>
    <string-array name="glo_cpu_titles">
        <item>Max Frequency</item>
        <item>Min Frequency</item>
        <item>Governor</item>
        <item>Cores_on_touch</item>
        <item>First_level</item>
    </string-array>
    <string-array name="glo_cpu_descs">
        <item>The maximum frequency the CPU will use. You can lower it to increase battery life, or increase it for performance</item>
        <item>The minimum frequency the CPU will use. You can increase it for better performance or lower it for battery life</item>
        <item>This controls the scaling of the CPU frequencies depending on CPU load\n(Click to show governors explanations)</item>
        <item>How many cores goes online when you touch the screen</item>
        <item>The threshold that controls when a core will be woked up. Higher the value, harder for CPU core to become online</item>
    </string-array>
    <string-array name="glo_gov_titles">
        <item>Performance</item>
        <item>Powersave</item>
        <item>Userspace</item>
        <item>Ondemand</item>
        <item>Conservative</item>
        <item>Interactive</item>
        <item>Smartass</item>
    </string-array>
    <string name="cpu_info_list_header">Core Status</string>
    <string name="prefcat_vm_settings">DALVIK SETTINGS</string>
    <string name="dirty_ratio_title">Dirty ratio</string>
    <string name="dirty_background_title">Dirty background ratio</string>
    <string name="dirty_expire_title">Dirty expire centisecs</string>
    <string name="dirty_writeback_title">Dirty writeback centisecs</string>
    <string name="min_free_title">Minfree kbytes</string>
    <string name="overcommit_title">Overcommit ratio</string>
    <string name="swappiness_title">Swappiness</string>
    <string name="vfs_title">VFS cache pressure</string>
    <string name="time_in_state">TIME IN STATE</string>
    <string name="unused_cpu_states">UNUSED CPU STATES</string>
    <string name="total_state_time">TOTAL STATE TIME</string>
    <string name="no_states_file_found">No states file found. Are you sure your phone is
        compatible?\n\nIf you are running a custom ROM or kernel, try
        contacting its developer to inform him that the states file is not
        readable.</string>
    <string name="kernel_info">LINUX KERNEL INFORMATION</string>
    <string name="cpu_info">CPU INFORMATION</string>
    <string name="mem_info">MEMORY INFORMATION</string>
    <string name="pt_general">General</string>
    <string name="pt_zipalign_apks">Zipalign apps</string>
    <string name="ps_zipalign_apks">Zipalign any unaligned apps on each boot</string>
    <string name="pt_fix_permissions">Fix permissions</string>
    <string name="ps_fix_permissions">Fix permissions on apps and their data on each boot</string>
    <string name="pt_clear_data_cache">Clear cache</string>
    <string name="ps_clear_data_cache">Clear application cache files each boot</string>
    <string name="pt_enable_cron">Enable scheduled tasks</string>
    <string name="ps_enable_cron">Enable scheduled cron jobs</string>
    <string name="pt_tweaks">Enable super tweaks</string>
    <string name="ps_tweaks">Enable/disable super tweaks</string>
</resources>