<?xml version="1.0" encoding="utf-8"?>
<!--
Performance Control - An Android CPU Control application
Copyright (C) 2012  James Roberts

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="pref_dirty_ratio"
        android:title="@string/dirty_ratio_title" />
    <Preference
        android:key="pref_dirty_background"
        android:title="@string/dirty_background_title" />
    <Preference
        android:key="pref_dirty_expire"
        android:title="@string/dirty_expire_title" />
    <Preference
        android:key="pref_dirty_writeback"
        android:title="@string/dirty_writeback_title" />
    <Preference
        android:key="pref_min_free_kb"
        android:title="@string/min_free_title" />
    <Preference
        android:key="pref_overcommit"
        android:title="@string/overcommit_title" />
    <Preference
        android:key="pref_swappiness"
        android:title="@string/swappiness_title" />
    <Preference
        android:key="pref_vfs"
        android:title="@string/vfs_title" />

</PreferenceScreen>