<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingLeft="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/kernel_info" />

        <TextView
            android:id="@+id/kernel_info"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/cpu_info" />

        <TextView
            android:id="@+id/cpu_info"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/mem_info" />

        <TextView
            android:id="@+id/mem_info"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>
