<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/backup_boot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sdcard" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp" >

            <TextView
                android:id="@+id/titleboot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:fontFamily="sans-serif-condensed"
                android:singleLine="true"
                android:text="@string/bk_boot"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/summaryboot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@android:id/title"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-light"
                android:maxLines="4"
                android:text="@string/bk_boot_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="#FFFFFF" />

    <LinearLayout
        android:id="@+id/backup_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sdcard" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp" >

            <TextView
                android:id="@+id/titlerecovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:fontFamily="sans-serif-condensed"
                android:singleLine="true"
                android:text="@string/bk_recovery"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/summaryrecovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-light"
                android:maxLines="4"
                android:text="@string/bk_recovery_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/View2"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="#FFFFFF" />

    <ListView
        android:id="@+id/navbarlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:fontFamily="sans-serif-condensed"
                android:singleLine="true"
                android:text="No Backups found"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-thin"
                android:maxLines="4"
                android:text="The backups you make will be displayed here "
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>